--- a/css/Tic-tac-toe.css
+++ b/css/Tic-tac-toe.css
@@ -1,3 +1,10 @@
+.status{
+    margin: 10px;
+    font-size: 20px;
+}
+.board{
+    margin: 10px;
+}
 .board-row{
     height: 50px;
     width: 150px;
